--- a/support.html
+++ b/support.html
@@ -67,7 +67,7 @@
 <p>Your notes are stored locally on your device and (if you choose to share them) in your account. We recommend regularly backing up your device to protect your data.</p>
 
 <h2>Need More Help?</h2>
-<p>If you couldn't find the answer to your question, please contact us at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+<p>If you couldn't find the answer to your question, please contact us at: <a href="mailto:3tobiasfu@gmail.com">3tobiasfu@gmail.com</a></p>
 
 <div class="footer">
     &copy; 2025 Tobias Fu. All rights reserved.
