--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -80,7 +80,7 @@
 <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Last updated" date.</p>
 
 <h2>Contact Us</h2>
-<p>If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+<p>If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:3tobiasfu@gmail.com">3tobiasfu@gmail.com</a></p>
 
 <div class="footer">
     &copy; 2025 Tobias Fu. All rights reserved.
